--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "MIT",
   "dependencies": {
     "deasync": "^0.1.0",
-    "marked": "^0.3.3"
+    "marked": "^0.3.3",
+    "memory-cache": "^0.1.6"
   },
   "files": [
     "changelog.md",
@@ -23,6 +24,6 @@
     "README.md"
   ],
   "sails": {
-     "isHook": true
-   }
+    "isHook": true
+  }
 }
